--- a/consulting_portfolio_website/pubspec.yaml
+++ b/consulting_portfolio_website/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^0.13.4
   provider: ^6.0.2
   email_validator: ^2.0.1
+  flutter_iconly: ^1.0.2
 
 dev_dependencies:
   flutter_test:
