--- a/consulting_portfolio_website/pubspec.yaml
+++ b/consulting_portfolio_website/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.0.2
   email_validator: ^2.0.1
   flutter_iconly: ^1.0.2
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
