--- a/consulting_portfolio_website/pubspec.yaml
+++ b/consulting_portfolio_website/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   email_validator: ^2.0.1
   flutter_iconly: ^1.0.2
   carousel_slider: ^4.1.1
+  card_swiper: ^2.0.4
 
 dev_dependencies:
   flutter_test:
