--- a/consulting_portfolio_website/pubspec.yaml
+++ b/consulting_portfolio_website/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_iconly: ^1.0.2
   carousel_slider: ^4.1.1
   card_swiper: ^2.0.4
+  fancy_shimmer_image: ^2.0.2
 
 dev_dependencies:
   flutter_test:
