--- a/django-api/requirements.txt
+++ b/django-api/requirements.txt
@@ -7,6 +7,7 @@ django-cors-headers==3.13.0
 djangorestframework==3.13.1
 idna==3.3
 Pillow==9.1.1
+python-dotenv==0.20.0
 pytz==2022.1
 requests==2.28.1
 sqlparse==0.4.2
