--- a/django-api/requirements.txt
+++ b/django-api/requirements.txt
@@ -1,14 +1,22 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
+black==22.6.0
 certifi==2022.6.15
 charset-normalizer==2.1.0
+click==8.1.3
 Django==4.0.5
 django-cors-headers==3.13.0
 djangorestframework==3.13.1
 idna==3.3
+isort==5.10.1
+mypy-extensions==0.4.3
+pathspec==0.9.0
 Pillow==9.1.1
+platformdirs==2.5.2
 python-dotenv==0.20.0
 pytz==2022.1
 requests==2.28.1
 sqlparse==0.4.2
+tomli==2.0.1
+typing_extensions==4.3.0
 urllib3==1.26.10
