--- a/.github/workflows/deploy-django.yml
+++ b/.github/workflows/deploy-django.yml
@@ -36,18 +36,21 @@ jobs:
         python-version: 3.9
 
     - name: Install dependencies 
+      id: install-dependencies
       run: |
         cd django-api
         python -m pip install --upgrade pip 
         pip install -t requirements.txt 
 
     - name: Lint with flake8
+      id: lint
       run:  |
         cd django-api
         pip install flake8
         flake8  
 
     - name: Django Testing 
+      id: testing
       run: |
         cd django-api
         python3 manage.py test 
@@ -64,6 +67,7 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
 
     - name: Build, tag, and push image to Amazon ECR
+      id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: ${{ secrets.ECR_REPO }} 
