--- a/.github/workflows/deploy-django.yml
+++ b/.github/workflows/deploy-django.yml
@@ -56,7 +56,7 @@ jobs:
         python3 manage.py test 
  
     - name: Configure AWS Credentials
-    - uses: aws-actions/configure-aws-credentials@v1
+      uses: aws-actions/configure-aws-credentials@v1
       with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET }}
