--- a/django-api/requirements.txt
+++ b/django-api/requirements.txt
@@ -13,6 +13,7 @@ mypy-extensions==0.4.3
 pathspec==0.9.0
 Pillow==9.1.1
 platformdirs==2.5.2
+psycopg2-binary==2.9.3
 python-dotenv==0.20.0
 pytz==2022.1
 requests==2.28.1
