--- a/django-api/docker-compose.yml
+++ b/django-api/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   api:
     build:
       context: . 
-      dockerfile: .
+      dockerfile: Dockerfile
     command: /Start 
     container_name: api
     volumes: 
