--- a/django-api/nginx/default.conf
+++ b/django-api/nginx/default.conf
@@ -6,21 +6,14 @@ server {
     client_max_body_size 20M;
     listen 80; 
 
-    location / {
+    location /api/ {
         proxy_pass http://api;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
 
-    location /supersecret {
-        proxy_pass http://api;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host; 
-        proxy_redirect off;
-    }
-
-    location /redoc {
+    location /admin {
         proxy_pass http://api;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host; 
