--- a/django-api/requirements.txt
+++ b/django-api/requirements.txt
@@ -7,6 +7,7 @@ click==8.1.3
 Django==4.0.5
 django-cors-headers==3.13.0
 djangorestframework==3.13.1
+gunicorn==20.1.0
 idna==3.3
 isort==5.10.1
 mypy-extensions==0.4.3
