--- a/consulting_portfolio_website/pubspec.yaml
+++ b/consulting_portfolio_website/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   carousel_slider: ^4.1.1
   card_swiper: ^2.0.4
   fancy_shimmer_image: ^2.0.2
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
