--- a/.github/workflows/destroy-terraform.yml
+++ b/.github/workflows/destroy-terraform.yml
@@ -15,11 +15,12 @@ env:
   TF_VAR_aws-region: ${{ secrets.AWS_REGION }}
   TF_VAR_aws-secret-key: ${{ secrets.AWS_SECRET }}
   TF_VAR_aws-access-key: ${{ secrets.AWS_ACCESS }}
+  TF_VAR_secret-name: ${{ secrets.SECRET_NAME }}
   TF_VAR_key-name: ${{ secrets.PROD_KEY_NAME }}
   TF_VAR_acm-cert: ${{ secrets.PROD_ACM_CERT }}
-  TF_VAR_db_host: ${{ secrets.PGSQL_HOST }} 
-  TF_VAR_db_user: ${{ secrets.PGSQL_USER }} 
-  TF_VAR_db_password: ${{ secrets.PGSQL_PASSWORD }} 
+  TF_VAR_db-name: ${{ secrets.PGSQL_NAME }} 
+  TF_VAR_db-username: ${{ secrets.PGSQL_USERNAME }} 
+  TF_VAR_db-password: ${{ secrets.PGSQL_PASSWORD }} 
 
 jobs:
   terraform:
