--- a/consulting_portfolio_website/pubspec.yaml
+++ b/consulting_portfolio_website/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   card_swiper: ^2.0.4
   fancy_shimmer_image: ^2.0.2
   flutter_spinkit: ^5.1.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
