--- a/django-api/requirements.txt
+++ b/django-api/requirements.txt
@@ -5,7 +5,9 @@ certifi==2022.6.15
 charset-normalizer==2.1.0
 click==8.1.3
 Django==4.0.5
+django-admin-honeypot-updated-2021==1.2.0
 django-cors-headers==3.13.0
+django-ipware==4.0.2
 djangorestframework==3.13.1
 gunicorn==20.1.0
 idna==3.3
