--- a/.github/workflows/deploy-django.yml
+++ b/.github/workflows/deploy-django.yml
@@ -97,12 +97,12 @@ jobs:
     - name: Get .env variables from AWS parameter store
       run: |
           cd django-api
-          aws ssm get-parameter --name "/DeploymentConfig/PortfolioWebSite/Env" --with-decryption --query Parameter.Value --output text > .env
+          aws ssm get-parameter --name "${{secrets.PORTFOLIO_DB_SECRET}}" --with-decryption --query Parameter.Value --output text > .env
     
     - name: Create Docker containers on EC2
       uses: shimataro/ssh-key-action@v2
       with: 
-        known_hosts: $${{secrets.KNOWN_HOSTS}}
+        known_hosts: ${{secrets.KNOWN_HOSTS}}
         name: id_rsa
         key: ${{secrets.SSH_KEY}}
         
