--- a/.github/workflows/deploy-terraform.yml
+++ b/.github/workflows/deploy-terraform.yml
@@ -16,11 +16,9 @@ env:
   TF_VAR_aws-secret-key: ${{ secrets.AWS_SECRET }}
   TF_VAR_aws-access-key: ${{ secrets.AWS_ACCESS }}
   TF_VAR_secret-name: ${{ secrets.SECRET_NAME }}
-  TF_VAR_key-name: ${{ secrets.PROD_KEY_NAME }}
-  TF_VAR_acm-cert: ${{ secrets.PROD_ACM_CERT }}
-  TF_VAR_db-name: ${{ secrets.PGSQL_NAME }} 
-  TF_VAR_db-username: ${{ secrets.PGSQL_USERNAME }} 
-  TF_VAR_db-password: ${{ secrets.PGSQL_PASSWORD }} 
+  TF_VAR_key-name: ${{ secrets.SSH_KEY_NAME }}
+  TF_VAR_acm-cert: ${{ secrets.ACM_CERT }}
+  TF_VAR_db-name: ${{ secrets.DATABASE_NAME }} 
 
 jobs:
   terraform:
