--- a/.github/workflows/deploy-terraform.yml
+++ b/.github/workflows/deploy-terraform.yml
@@ -13,11 +13,11 @@ on:
 env:
   TF_WORKSPACE: ${{ github.event.inputs.environment }}
   TF_VAR_aws-region: ${{ secrets.AWS_REGION }}
-  TF_VAR_aws-secretkey: ${{ secrets.AWS_SECRET }}
-  TF_VAR_aws-accesskey: ${{ secrets.AWS_ACCESS }}
-  TF_VAR_secret-name: ${{ secrets.SECRET_NAME }}
+  TF_VAR_aws-secretkey: ${{ secrets.AWS_SECRETKEY }}
+  TF_VAR_aws-accesskey: ${{ secrets.AWS_ACCESSKEY }}
+  TF_VAR_secret-name: ${{ secrets.PORTFOLIO_DB_SECRET }}
   TF_VAR_key-name: ${{ secrets.SSH_KEY_NAME }}
-  TF_VAR_acm-cert: ${{ secrets.ACM_CERT }}
+  TF_VAR_acm-cert: ${{ secrets.CERTIFICATE_ARN }}
   TF_VAR_db-name: ${{ secrets.DATABASE_NAME }} 
 
 jobs:
@@ -42,8 +42,8 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESSKEY }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRETKEY }}
         aws-region: ${{ secrets.AWS_REGION }}
 
     - name: Terraform Init
@@ -51,7 +51,7 @@ jobs:
       run: | 
         cd Terraform
         cd Infrastructure
-        terraform init -backend-config="bucket=portfolio-website-magnolia-bucket" -backend-config="key=terraformstate/portfolioinfrastructure/terraform.tfstate" -backend-config="region=${{ secrets.AWS_REGION }}" -backend-config="access_key=${{  secrets.AWS_ACCESS }}" -backend-config="secret_key=${{ secrets.AWS_SECRET }}"
+        terraform init -backend-config="bucket=portfolio-website-magnolia-bucket" -backend-config="key=terraformstate/portfolioinfrastructure/terraform.tfstate" -backend-config="region=${{ secrets.AWS_REGION }}" -backend-config="access_key=${{  secrets.AWS_ACCESSKEY }}" -backend-config="secret_key=${{ secrets.AWS_SECRETKEY }}"
 
     - name: Format Terraform 
       id: fmt 
