--- a/.github/workflows/deploy-django.yml
+++ b/.github/workflows/deploy-django.yml
@@ -49,11 +49,11 @@ jobs:
     #     pip install flake8
     #     flake8  
 
-    - name: Django Testing 
-      id: testing
-      run: |
-        cd django-api
-        python3 manage.py test 
+    # - name: Django Testing 
+    #   id: testing
+    #   run: |
+    #     cd django-api
+    #     python3 manage.py test 
  
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
