--- a/django-api/docker-compose.yml
+++ b/django-api/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - "5432:5432"
     restart: always
     environment:
-      POSTGRES_USER: postgres
+      POSTGRES_USERNAME: postgres
       POSTGRES_PASSWORD: password
       POSTGRES_DB: portfolio
     networks:
