--- a/.github/workflows/build-ami.yml
+++ b/.github/workflows/build-ami.yml
@@ -1,4 +1,4 @@
-name: "Build AMI"
+name: "Deploy Django And Packer"
 
 on:
   workflow_dispatch:
@@ -14,12 +14,11 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_REGION: ${{ secrets.AWS_REGION }}
-  PKR_VAR_docker-username: ${{ secrets.DOCKER_USERNAME }}
-  PKR_VAR_ecr-repo: ${{ secrets.ECRREPO }}
+
 
 jobs: 
-  build-ami:
-    name: "Build AMI"
+  deploy-django:
+    name: "Deploy Django"
     runs-on: ubuntu-latest
 
     defaults:
@@ -31,8 +30,72 @@ jobs:
     - name: Checkout 
       uses: actions/checkout@v2 
 
-    - name: Create-Image
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with: 
+        python-version: 3.9
+
+    - name: Install dependencies 
+      id: install-dependencies
+      run: |
+        cd django-api
+        python -m pip install --upgrade pip 
+        pip install -r requirements.txt 
+ 
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESSKEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRETKEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+    - name: Get .env variables from Secret Manager
+      run: |
+          cd django-api
+          aws secretsmanager get-secret-value --secret-id ${{secrets.PORTFOLIO_DB_SECRET}} --region ${{secrets.AWS_REGION}} | \
+            jq -r '.SecretString' | \
+            jq -r "to_entries|map(\"\(.key)=\\\"\(.value|tostring)\\\"\")|.[]" > .env
+    
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: Build, tag, and push Django image to Amazon ECR
+      id: build-django
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: ${{ secrets.ECR_REPO }} 
+        IMAGE_TAG: ${{ github.sha }}
+      
+      run: |
+        cd django-api
+        docker build --file Dockerfile -t $$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:django-latest .
+        docker push -a $ECR_REGISTRY/$ECR_REPOSITORY
+    # docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:Django-$IMAGE_TAG .
+    #  docker push $ECR_REGISTRY/$ECR_REPOSITORY:Django-$IMAGE_TAG
+
+
+    - name: Build, tag, and push NGINX image to Amazon ECR
+      id: build-nginx
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: ${{ secrets.ECR_REPO }} 
+        IMAGE_TAG: ${{ github.sha }}
+      run: |
+        cd django-api
+        cd nginx
+        docker build --file Dockerfile -t $$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:nginx-latest .
+        docker push -a $ECR_REGISTRY/$ECR_REPOSITORY
+  # docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:Nginx-$IMAGE_TAG .
+  # docker push $ECR_REGISTRY/$ECR_REPOSITORY:Nginx-$IMAGE_TAG
+
+    - name: Create Packer Image
       id: create-image
+      env:
+        PKR_VAR_docker-username: ${{ secrets.DOCKER_USERNAME }}
+        PKR_VAR_ecr-repo: ${{ secrets.ECRREPO }}
+        PKR_VAR_ecr-registry: ${{ steps.login-ecr.outputs.registry }}
+        PKR_VAR_image-tag: ${{ github.sha }}
       run: |
         cd Terraform
         cd packer
