--- a/.github/workflows/destroy-dbsecrets.yml
+++ b/.github/workflows/destroy-dbsecrets.yml
@@ -18,6 +18,7 @@ env:
   TF_VAR_secret-name: ${{ secrets.PORTFOLIO_DB_SECRET }}
   TF_VAR_key-name: ${{ secrets.SSH_KEY_NAME }}
   TF_VAR_db-name: ${{ secrets.DATABASE_NAME }} 
+  TF_VAR_db-host: ${{ secrets.DATABASE_HOST }}
 
 jobs:
   terraform:
